# strmath

./: .gitignore  Cargo.toml  README.md
src/: fmt.rs  from.rs  imp.rs  impl.rs  lib.rs  macros.rs  mathstr.rs  serde.rs  strmath.rs  test.rs  utils.rs
src/ops/: add.rs  deref.rs  div.rs  eq.rs  mod.rs  mul.rs  ord.rs  rem.rs  sh.rs  sub.rs
tests/: test.rs
