[package]
name = "strmath"
description = "Do math with your strings."
keywords = ["string", "strmath"]
authors = ["Rhelvetican <bionicvnb@gmail.com>"]
readme = "README.md"
license = "MIT"
version = "0.6.2"
edition = "2021"
repository = "https://github.com/Rhelvetican/strmath"
homepage = "https://github.com/Rhelvetican/strmath"

[lib]
name = "strmath"
path = "src/lib.rs"

[dependencies.serde]
version = "1"
optional = true

[features]
serde = ["dep:serde"]
