[package]
    authors     = ["Rhelvetican <bionicvnb@gmail.com>"]
    description = "Do math with your strings."
    edition     = "2021"
    homepage    = "https://github.com/Rhelvetican/strmath"
    keywords    = ["math", "string", "strmath"]
    license     = "MIT"
    name        = "strmath"
    readme      = "README.md"
    repository  = "https://github.com/Rhelvetican/strmath"
    version     = "0.7.0"

[lib]
    name = "strmath"
    path = "src/lib.rs"

[dependencies.serde]
    optional = true
    version  = "1"

[features]
    serde = ["dep:serde"]
