[package]
    authors     = ["Rhelvetican", "mbrubeck"]
    description = "Do math with your strings."
    edition     = "2024"
    homepage    = "https://github.com/Rhelvetican/strmath"
    keywords    = ["math", "string", "strmath"]
    license     = "MIT"
    name        = "strmath"
    readme      = "README.md"
    repository  = "https://github.com/Rhelvetican/strmath"
    version     = "0.8.0"

[lib]
    crate-type = ["lib"]

[dependencies]
    unicode-segmentation = "1.12"
